feat: import annotation layers

--- a/src/app/@ansyn/menu-items/layers-manager/components/layers-collection/layer-collection.component.html
+++ b/src/app/@ansyn/menu-items/layers-manager/components/layers-collection/layer-collection.component.html
@@ -13,6 +13,8 @@
 				<span (click)="showAll()">Show all</span>
 			</div>
 
+			<ansyn-import-layer></ansyn-import-layer>
+
 			<button class="add-layer" (click)="openModal(SelectedModalEnum.edit)">
 				<i class="icon-layer-add"></i>
 			</button>
