--- a/src/app/@ansyn/menu-items/layers-manager/components/import-layer/import-layer.component.html
+++ b/src/app/@ansyn/menu-items/layers-manager/components/import-layer/import-layer.component.html
@@ -1,6 +1,5 @@
-<label class="import-layer" for="import-layer">
-	<input id="import-layer"
-		   type="file"
+<label class="import-layer">
+	<input type="file"
 		   accept=".kml, .geojson"
 		   (change)="importLayer($event.target.files)"/>
 	<i class="icon-layer-import"></i>
