1642 select overlapping map annotations (#1645)
* 1 Initially select all features that contain the clicked point, by "multi: true"
2 From these features, select the one with the mininum area

* Decreasing the click tolerance,to make selection more intuitive

* annotations-context-menu: adding "pointer-events: none" so that that component does not interfere with selecting annotation inside annotation

* Now we have indications, both for selection (click) and for hover

* Cont.

* Cont.

* Cont.

* CR fixes + tweaks

--- a/src/app/@ansyn/map-facade/components/annotation-context-menu/annotation-context-menu.component.less
+++ b/src/app/@ansyn/map-facade/components/annotation-context-menu/annotation-context-menu.component.less
@@ -16,8 +16,10 @@
 		visibility: hidden;
 		transform-origin: left top;
 		z-index: 2;
+		pointer-events: none;
 		.remove-feature-wrapper {
 			position: absolute;
+			pointer-events: all;
 			width: 20px;
 			height: 20px;
 			background-color: @application-main-color;
@@ -40,7 +42,7 @@
 
 	}
 
-	&:focus {
+	&:focus, &.visible {
 		.context-menu-wrapper {
 			visibility: visible;
 		}
