New icon to select overlays for the quick loop

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -262,7 +262,8 @@
       "backwards": "Previous overlay",
       "forward": "Next overlay",
       "reset": "Reset timeline (according to the time filter)",
-      "enlarge": "Expand timeline"
+      "enlarge": "Expand timeline",
+      "quickloop": "Next overlay from the quick loop (key: Q)"
     },
     "dataInputFiltersConfig": {
       "PLANET": {
