--- a/src/app/@ansyn/menu-items/layers-manager/components/layer/layer.component.html
+++ b/src/app/@ansyn/menu-items/layers-manager/components/layer/layer.component.html
@@ -4,8 +4,8 @@
 		<ansyn-checkbox
 			class="regular-checkbox"
 			[id]="'checkbox' + layer?.id"
-			(change)="onCheckboxClicked($event.target.checked)"
-			[checked]="selectedLayersIds.includes(layer?.id)">
+			(checkedChange)="onCheckboxClicked($event)"
+			[checked]="isChecked">
 		</ansyn-checkbox>
 	</div>
 
