--- a/src/app/@ansyn/core/components/ansyn-checkbox/ansyn-checkbox.component.html
+++ b/src/app/@ansyn/core/components/ansyn-checkbox/ansyn-checkbox.component.html
@@ -1,12 +1,10 @@
 <div>
 	<input type="checkbox"
-		   id="checkbox_{{ id }}"
-		   class="regular-checkbox"
-		   [checked]="checked ? 'checked' : ''"
-		   (click)='onInputClicked(id)'
-		   [disabled]=" disabled ? 'disabled' : '' "
-	/>
-	<label for="checkbox_{{ id }}"></label>
+		   [id]="id"
+		   [checked]="checked"
+		   (change)='checkedChange.emit($event.target.checked)'
+		   [disabled]="disabled"/>
+	<label [for]="id"></label>
 </div>
 <div class="ansyn-checkbox-text">
 	<span>{{text}}</span>
