--- a/src/app/@ansyn/core/components/ansyn-checkbox/ansyn-checkbox.component.less
+++ b/src/app/@ansyn/core/components/ansyn-checkbox/ansyn-checkbox.component.less
@@ -12,11 +12,11 @@
 		}
 	}
 
-	input.regular-checkbox {
+	input {
 		display: none;
 	}
 
-	input.regular-checkbox + label {
+	input + label {
 		border: 1px solid #C9C9C9;
 		box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0 -15px 10px -12px rgba(0, 0, 0, 0.05);
 		padding: 9px;
@@ -25,15 +25,19 @@
 		position: relative;
 	}
 
-	input.regular-checkbox:hover + label:hover {
+	input:disabled + label {
+		opacity: .5;
+	}
+
+	input:hover:not(:disabled) + label:hover {
 		border: 1px solid #FFFFFF;
 	}
 
-	input.regular-checkbox + label:active {
+	input + label:active {
 		box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0 1px 3px rgba(0, 0, 0, 0.1);
 	}
 
-	input.regular-checkbox:checked + label {
+	input:checked + label {
 		background-color: #FFFFFF;
 		border: 1px solid #FFFFFF;
 		box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0 -15px 10px -12px rgba(0, 0, 0, 0.05), inset 15px 10px -12px rgba(255, 255, 255, 0.1);
