auth0 returns token

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -341,7 +341,7 @@
   },
   "loginConfig": {
     "baseUrl": "{{ getv "/ansyn/login/baseurl" "http://ansyn.io:9001/api/v1/login" }}",
-    "active":  "{{ getv "/ansyn/login/active" "" }}",
+    "active":  "{{ getv "/ansyn/login/active" "true" }}",
     "authorizedPath": "/"
   },
   "menuConfig": {
