annotation control style fixing

--- a/src/app/@ansyn/menu-items/layers-manager/components/layers-collection/layer-collection.component.less
+++ b/src/app/@ansyn/menu-items/layers-manager/components/layers-collection/layer-collection.component.less
@@ -13,7 +13,7 @@ div.container {
 				display: flex;
 			}
 			div.actions .show-all {
-				display: block;
+				/* display: block; */
 			}
 		}
 
@@ -22,7 +22,7 @@ div.container {
 				background: rgba(255, 255, 255, 0.4);
 				ansyn-layer-menu {
 					visibility: visible;
-					transform: translateX(0);
+					transform: translateX(70%);
 					opacity: 1;
 					pointer-events: auto;
 				}
