--- a/src/app/@ansyn/ansyn/callback/callback.component.html
+++ b/src/app/@ansyn/ansyn/callback/callback.component.html
@@ -1,3 +1,4 @@
-<div class="loading">
-	<img src="assets/loading.svg" alt="loading">
-</div>
+<!--<div class="loading">-->
+	<!--<img src="assets/loading.svg" alt="loading">-->
+<!--</div>-->
+<ansyn-loader [show]="true" [loaderText]="'Loading'"></ansyn-loader>
