--- a/src/app/@ansyn/menu-items/layers-manager/components/data-layers-modals/edit-layer/edit-layer.component.html
+++ b/src/app/@ansyn/menu-items/layers-manager/components/data-layers-modals/edit-layer/edit-layer.component.html
@@ -1,9 +1,12 @@
 <div class="edit-layer">
 	<form #f="ngForm" class="edit-layer-form" (ngSubmit)="layer ? editLayer(layerName.value) : addLayer(layerName.value)">
-
-		<input id="layerName" name="name" required [value]="layer?.name" autocomplete="off" #layerName>
-		<span class="bar"></span>
-		<label class="case-name" for="layerName">Name</label>
+		<ansyn-input
+			#layerName
+			[ngModel]="layer?.name"
+			name="name"
+			[required]="true"
+			label="Name">
+		</ansyn-input>
 
 		<div class="bottom-btns">
 			<button type="button" (click)="closeModal()">Cancel</button>
