fix layers tooltips

--- a/src/app/@ansyn/menu-items/layers-manager/components/layers-collection/layer-collection.component.less
+++ b/src/app/@ansyn/menu-items/layers-manager/components/layers-collection/layer-collection.component.less
@@ -1,4 +1,5 @@
 @import "core/less/common";
+@import 'core/less/tooltip';
 
 div.container {
 	padding: 0 0 20px 0;
@@ -77,6 +78,7 @@ div.container {
 
 		button.add-layer, ansyn-import-layer {
 			display: none;
+			position: relative;
 		}
 
 		div.show-all {
