--- a/src/app/@ansyn/menu-items/layers-manager/components/layers-collection/layer-collection.component.html
+++ b/src/app/@ansyn/menu-items/layers-manager/components/layers-collection/layer-collection.component.html
@@ -13,9 +13,10 @@
 				<span (click)="showAll()">Show all</span>
 			</div>
 
-			<ansyn-import-layer></ansyn-import-layer>
+			<ansyn-import-layer tooltip-value="Import layer" tooltip-class="bottom right"></ansyn-import-layer>
 
-			<button class="add-layer" (click)="openModal(SelectedModalEnum.edit)">
+			<button class="add-layer" (click)="openModal(SelectedModalEnum.edit)"
+					tooltip-value="Create new layer" tooltip-class="bottom right">
 				<i class="icon-layer-add"></i>
 			</button>
 
