--- a/src/app/@ansyn/status-bar/components/timeline-timepicker/timeline-timepicker.component.less
+++ b/src/app/@ansyn/status-bar/components/timeline-timepicker/timeline-timepicker.component.less
@@ -42,6 +42,9 @@
 		border: 1px solid dimgrey;
 		font-size: 12px;
 		color: white;
+		.icon-status-bar-time{
+			pointer-events: none;
+		}
 	}
 	input {
 		background: black;
