--- a/src/app/@ansyn/core/components/imagery-status/imagery-status.component.less
+++ b/src/app/@ansyn/core/components/imagery-status/imagery-status.component.less
@@ -46,7 +46,7 @@
 				padding: 2px 4px;
 				display: flex;
 				align-items: center;
-
+				z-index: 1;
 				&:hover:not(:disabled) {
 					background: rgba(0, 0, 0, 0.5);
 				}
