--- a/src/app/@ansyn/menu-items/layers-manager/components/data-layers-modals/edit-layer/edit-layer.component.html
+++ b/src/app/@ansyn/menu-items/layers-manager/components/data-layers-modals/edit-layer/edit-layer.component.html
@@ -4,13 +4,12 @@
 			#layerName
 			[ngModel]="layer?.name"
 			name="name"
-			[required]="true"
 			label="Name">
 		</ansyn-input>
 
 		<div class="bottom-btns">
 			<button type="button" (click)="closeModal()">Cancel</button>
-			<button [disabled]="f.invalid">OK</button>
+			<button [disabled]="!layerName.value">OK</button>
 		</div>
 	</form>
 </div>
