import no fill icon

--- a/src/app/@ansyn/menu-items/tools/components/annotations-control/annotations-control.component.html
+++ b/src/app/@ansyn/menu-items/tools/components/annotations-control/annotations-control.component.html
@@ -59,6 +59,7 @@
 				<label for="color-fill-picker">
 					<span class="text">Fill</span>
 					<span class="color" [style.background]="annotationProperties.fillColor"></span>
+					<span class="no-fill"><i class="icon-annotation-no-fill"></i></span>
 				</label>
 				<input
 					id="color-fill-picker"
@@ -71,6 +72,7 @@
 				<label for="color-stroke-picker">
 					<span class="text">Stroke</span>
 					<span class="color" [style.background]="annotationProperties.strokeColor"></span>
+					<span class="no-fill"><i class="icon-annotation-no-fill"></i></span>
 				</label>
 				<input id="color-stroke-picker"
 					   type="color"
