--- a/src/app/@ansyn/menu-items/tools/components/annotations-control/annotations-control.component.less
+++ b/src/app/@ansyn/menu-items/tools/components/annotations-control/annotations-control.component.less
@@ -164,6 +164,13 @@
 							height: 10px;
 							box-shadow: 0 0 1px 1px #297f9b;
 						}
+						span.no-fill {
+							background: transparent;
+							display: inline-block;
+							width: 10px;
+							height: 10px;
+							box-shadow: 0 0 1px 1px #297f9b;
+						}
 						span.text {
 							font-size: 14px;
 						}
