fix import file type

--- a/src/app/@ansyn/menu-items/layers-manager/components/import-layer/import-layer.component.html
+++ b/src/app/@ansyn/menu-items/layers-manager/components/import-layer/import-layer.component.html
@@ -1,6 +1,6 @@
 <label class="import-layer">
 	<input type="file"
-		   accept=".kml, .geojson, .json"
+		   accept=".kml, .geojson, .json, .KML, .JSON, .GEOJSON"
 		   (change)="importLayer($event.target.files)"/>
 	<i class="icon-layer-import"></i>
 </label>
