--- a/src/app/@ansyn/ansyn/ansyn/ansyn.component.html
+++ b/src/app/@ansyn/ansyn/ansyn/ansyn.component.html
@@ -1,5 +1,5 @@
 <div class="app animations" [ngClass]="(isPinnedClass$ | async)">
-	<button type="button" (click)="auth0.login()">Click Me!</button>
+	<!--<button type="button" (click)="auth0.login()">Click Me!</button>-->
 
 	<div class="menu">
 		<ansyn-menu [version]="version"></ansyn-menu>
