--- a/src/app/@ansyn/map-facade/components/annotation-context-menu/annotation-context-menu.component.html
+++ b/src/app/@ansyn/map-facade/components/annotation-context-menu/annotation-context-menu.component.html
@@ -2,6 +2,8 @@
 	[ngStyle]="contextMenuWrapperStyle">
 
 	<div class="remove-feature-wrapper" *ngIf="!fromHover">
+		<!-- Don't change "mousedown" to "click"! -->
+		<button><i class="icon-tools-ruler" (mousedown)="toggleMeasures($event)"></i></button>
 		<button class='removeFeature' (mousedown)="removeFeature($event)">x</button>
 	</div>
 
