feat: color picker opacity

--- a/src/app/@ansyn/menu-items/tools/components/annotations-control/annotations-control.component.less
+++ b/src/app/@ansyn/menu-items/tools/components/annotations-control/annotations-control.component.less
@@ -81,8 +81,7 @@
 				color: white;
 				font-size: 35px;
 			}
-			&:hover,
-			&.mode-on {
+			&:hover:not(.mode-on), &.mode-on {
 				background-color: rgb(41, 127, 155);
 			}
 
@@ -140,52 +139,6 @@
 					outline: none;
 				}
 
-				&.color-selection-expand {
-					width: 80px;
-					left: -39px;
-
-					.color-picker-item {
-						font-size: 14px;
-						color: white;
-						label {
-							width: 100%;
-							height: 100%;
-							display: flex;
-							justify-content: space-between;
-							align-items: center;
-							box-sizing: border-box;
-							padding: 4px 7px 4px 12px;
-							cursor: pointer;
-							font-size: 14px;
-						}
-						span.color {
-							display: inline-block;
-							width: 10px;
-							height: 10px;
-							box-shadow: 0 0 1px 1px #297f9b;
-						}
-						span.no-fill {
-							background: transparent;
-							display: inline-block;
-							width: 10px;
-							height: 10px;
-							box-shadow: 0 0 1px 1px #297f9b;
-						}
-						span.text {
-							font-size: 14px;
-						}
-						input {
-							display: block;
-							visibility: hidden;
-							width: 0;
-							height: 0;
-							padding: 0;
-							margin: 0;
-							border: none;
-						}
-
-					}
-				}
 				&.color-selection-expand.open {
 					visibility: visible;
 				}
