fix: unit testing

--- a/src/app/@ansyn/menu-items/tools/components/color-picker/color-picker.component.html
+++ b/src/app/@ansyn/menu-items/tools/components/color-picker/color-picker.component.html
@@ -1,7 +1,7 @@
 <div class="color-picker-item">
 	<input [id]="id"
 		   type="color"
-		   [disabled]="noFill"
+		   [disabled]="!shown"
 		   [value]="color"
 		   (change)="colorChange.emit($event.target.value)"
 		   [title]="label"/>
