fix: disabled second shown if first inactive

--- a/src/app/@ansyn/menu-items/tools/components/annotations-control/annotations-control.component.html
+++ b/src/app/@ansyn/menu-items/tools/components/annotations-control/annotations-control.component.html
@@ -59,6 +59,7 @@
 				label="Fill"
 				[color]="annotationProperties.fill"
 				[shown]="Boolean(annotationProperties['fill-opacity'])"
+				[shownDisabled]="!(annotationProperties['stroke-opacity'])"
 				(shownChange)="changeFillShown($event)"
 				(colorChange)="changeFillColor($event)">
 			</ansyn-color-picker>
@@ -67,6 +68,7 @@
 				label="Stroke"
 				[color]="annotationProperties.stroke"
 				[shown]="Boolean(annotationProperties['stroke-opacity'])"
+				[shownDisabled]="!(annotationProperties['fill-opacity'])"
 				(colorChange)="changeStrokeColor($event)"
 				(shownChange)="changeStrokeShown($event)">
 			</ansyn-color-picker>
