fix css via new icons

--- a/src/app/@ansyn/assets/styles/icons.less
+++ b/src/app/@ansyn/assets/styles/icons.less
@@ -297,6 +297,9 @@
 .icon-layer-import:before {
 	content: "\e90e";
 }
-.icon-annotation-no-fill:before {
+.icon-annotation-no-fill-inactive:before {
 	content: "\e91c";
+}
+.icon-annotation-no-fill:before {
+	content: "\e91e";
 }
