--- a/src/app/@ansyn/menu/menu/menu.component.less
+++ b/src/app/@ansyn/menu/menu/menu.component.less
@@ -20,6 +20,7 @@ div.menu-wrapper {
 		display: flex;
 		z-index: @z-index-menu;
 		width: @menu-width;
+		height: 100%;
 
 		div.menu-btn {
 			position: relative;
