--- a/src/app/@ansyn/status-bar/components/combo-boxes/combo-boxes.component.less
+++ b/src/app/@ansyn/status-bar/components/combo-boxes/combo-boxes.component.less
@@ -1,5 +1,7 @@
 :host {
-	display: inherit;
+	display: block;
+	position: relative;
+	height: 100%;
 	.block {
 		padding: 3px;
 		box-sizing: border-box;
