--- a/src/app/@ansyn/ansyn/ansyn/ansyn.component.less
+++ b/src/app/@ansyn/ansyn/ansyn/ansyn.component.less
@@ -104,6 +104,8 @@
 			div.menu {
 				animation: menu-init @animation-duration;
 				transform: transitionX(0);
+				position: relative;
+				height: 100%;
 				.ansynToolsAlone {
 					background: @application-main-color;
 					height: 100%;
