--- a/src/app/@ansyn/status-bar/components/navigation-bar/navigation-bar.component.less
+++ b/src/app/@ansyn/status-bar/components/navigation-bar/navigation-bar.component.less
@@ -2,7 +2,9 @@
 @import 'core/less/tooltip';
 
 :host{
-	display: inherit;
+	display: block;
+	position: relative;
+	height: 100%;
 }
 .navigation {
 	background: white;
