--- a/src/app/@ansyn/status-bar/components/combo-boxes/combo-boxes.component.html
+++ b/src/app/@ansyn/status-bar/components/combo-boxes/combo-boxes.component.html
@@ -5,7 +5,7 @@
 			<ansyn-combo-box-trigger
 				#trigger
 				class="combo-box-width"
-				(click)="toggleDataInputFilterIcon($event)"
+				(click)="toggleDataInputFilterIcon()"
 				icon="icon-status-bar-input-data"
 				[isActive]="dataInputFilterExpand"
 				[comboBoxToolTipDescription]="toolTips.dataInputFilter"
