--- a/src/app/builder/dynamic-ansyn/bootstrap/ansyn.bootstrap.component.less
+++ b/src/app/builder/dynamic-ansyn/bootstrap/ansyn.bootstrap.component.less
@@ -1,7 +1,10 @@
+@import 'core/less/common';
 /deep/ body {
 
 	ansyn-selected-case-bar div.pop-hover:hover .pop-content, .pop-content.visible {
 		visibility: hidden !important;
 	}
-
+	ansyn-tools {
+		background: @application-main-color;
+	}
 }
