--- a/src/app/@ansyn/map-facade/components/annotation-context-menu/annotation-context-menu.component.less
+++ b/src/app/@ansyn/map-facade/components/annotation-context-menu/annotation-context-menu.component.less
@@ -36,6 +36,10 @@
 				font-size: 19px;
 				font-weight: bold;
 				outline: none;
+
+				&.active {
+					background-color: rgb(41, 127, 155);
+				}
 			}
 		}
 
