1643 annotations with measures (#1704)
* Now showing segment line lengths for a polyline

* Now showing segment line lengths for polygons also

* Now can toggle measure via the selection controls

* Guard (needed for the annotation draw stage)

* Now hovering does not disrupte the style

* Now drawing all annotations work again

* Now show measures for rectangle and circle

* Now showing measures for arrow

* Master merge tweaks

* An active state for the show measures button

* updateAnnotationFeature$ : updating the store in a more standard, immutable way

* Renaming: eliminating uses of the words "context menu"

* 1 using const instead of let
2 using getEntity(feature) instead of feature.properties

--- a/src/app/@ansyn/map-facade/components/annotation-context-menu/annotation-context-menu.component.html
+++ b/src/app/@ansyn/map-facade/components/annotation-context-menu/annotation-context-menu.component.html
@@ -2,6 +2,8 @@
 	[ngStyle]="contextMenuWrapperStyle">
 
 	<div class="remove-feature-wrapper" *ngIf="!fromHover">
+		<!-- Don't change "mousedown" to "click"! -->
+		<button [class.active]="this.action?.payload?.showMeasures"><i class="icon-tools-ruler" (mousedown)="toggleMeasures($event)"></i></button>
 		<button class='removeFeature' (mousedown)="removeFeature($event)">x</button>
 	</div>
 
