--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -126,6 +126,7 @@
   },
   "mapFacadeConfig": {
     "overlayCoverage": 0.1,
+    "displayDebounceTime": 400,
     "sensorTypeShortcuts": {
       "Panchromatic": "P",
       "8-band (Coastal, Blue, Green, Yellow, Red, Red-edge, NIR1, NIR2) Multispectral": "8B",
