hide ansyn default case popover

--- a/src/app/builder/dynamic-ansyn/bootstrap/ansyn.bootstrap.component.less
+++ b/src/app/builder/dynamic-ansyn/bootstrap/ansyn.bootstrap.component.less
@@ -1,7 +1,7 @@
 @import 'core/less/common';
 /deep/ body {
 
-	ansyn-selected-case-bar div.pop-hover:hover .pop-content, .pop-content.visible {
+	ansyn-popover div.pop-hover:hover .pop-content, .pop-content.visible {
 		visibility: hidden !important;
 	}
 	ansyn-tools {
