fix: builder css fixes

--- a/src/app/@ansyn/status-bar/components/status-bar/status-bar.component.html
+++ b/src/app/@ansyn/status-bar/components/status-bar/status-bar.component.html
@@ -7,7 +7,7 @@
 
 <div class="status-bar" [class.separated-state]="!hideOverlay">
 	<div class="selected-case">
-		<ansyn-popover [text]="selectedCaseName" [icon]="icon">
+		<ansyn-popover class="default-case" [text]="selectedCaseName" [icon]="icon">
 			<button class="share-link" (click)="copyLink()">
 				<i class="icon-status-bar-share-link"></i>
 				<span>Share link</span>
