--- a/src/app/@ansyn/status-bar/components/timeline-timepicker/timeline-timepicker.component.less
+++ b/src/app/@ansyn/status-bar/components/timeline-timepicker/timeline-timepicker.component.less
@@ -9,7 +9,7 @@
 	background: black;
 	width: 230px;
 	height: 97px;
-	padding: 6px 12px;
+	padding: 12px;
 	flex-direction: column;
 	top: 0;
 	right: 0;
