--- a/src/app/builder/dynamic-ansyn/bootstrap/ansyn.bootstrap.component.less
+++ b/src/app/builder/dynamic-ansyn/bootstrap/ansyn.bootstrap.component.less
@@ -7,4 +7,9 @@
 	ansyn-tools {
 		background: @application-main-color;
 	}
+
+	div.app > div.menu {
+		box-shadow: 0 0 10px black;
+		z-index: @z-index-menu-container;
+	}
 }
