--- a/src/app/@ansyn/map-facade/components/annotation-context-menu/annotation-context-menu.component.less
+++ b/src/app/@ansyn/map-facade/components/annotation-context-menu/annotation-context-menu.component.less
@@ -16,11 +16,11 @@
 		visibility: hidden;
 		transform-origin: left top;
 		pointer-events: none;
-		.remove-feature-wrapper {
+		.buttons {
 			position: absolute;
 			pointer-events: all;
-			height: 20px;
-			background-color: @application-main-color;
+			border: 1px solid white;
+			box-sizing: border-box;
 			color: white;
 			display: flex;
 			align-items: center;
@@ -30,15 +30,21 @@
 			transform: translate(calc(~'100% + 15px'), calc(~'-100% + 7.5px'));
 
 			button {
-				background: @application-main-color;
+				background-color: @application-main-color;
 				color: white;
-				border: 1px solid #2E2D46;
-				font-size: 19px;
-				font-weight: bold;
+				border: none;
 				outline: none;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				font-size: 20px;
 
 				&.active {
 					background-color: rgb(41, 127, 155);
+				}
+
+				&:hover {
+					color: yellow;
 				}
 			}
 		}
