--- a/src/app/@ansyn/map-facade/components/annotation-context-menu/annotation-context-menu.component.less
+++ b/src/app/@ansyn/map-facade/components/annotation-context-menu/annotation-context-menu.component.less
@@ -21,23 +21,34 @@
 			pointer-events: all;
 			border: 1px solid white;
 			box-sizing: border-box;
+			background-color: @application-main-color;
 			color: white;
 			display: flex;
 			align-items: center;
 			right: 0;
 			top: 0;
 
-			transform: translate(calc(~'100% + 15px'), calc(~'-100% + 7.5px'));
+			transform: translate(calc(~'100% + 15px'), -12px);
 
 			button {
 				background-color: @application-main-color;
 				color: white;
 				border: none;
 				outline: none;
+				padding: 2px 6px;
 				display: flex;
 				justify-content: center;
 				align-items: center;
 				font-size: 20px;
+
+				&.removeFeature {
+					font-size: 19px;
+					margin-bottom: 1px;
+
+					i.icon-close:before {
+						content: '\2715'; // MULTIPLICATION X
+					}
+				}
 
 				&.active {
 					background-color: rgb(41, 127, 155);
