changes during integration session

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -59,7 +59,7 @@
               },
               "flags": {},
               "mapType": "openLayersMap",
-              "sourceType": "{{ getv "/ansyn/imagery/mapsource" "ESRI_4326" }}",
+              "sourceType": "{{ getv "/ansyn/imagery/mapsource" "BING" }}",
               "id": "defaultImagery1"
             }
           ],
