Changing icon hover style

--- a/src/app/@ansyn/map-facade/components/annotation-context-menu/annotation-context-menu.component.less
+++ b/src/app/@ansyn/map-facade/components/annotation-context-menu/annotation-context-menu.component.less
@@ -50,12 +50,8 @@
 					}
 				}
 
-				&.active {
+				&.active, &:hover {
 					background-color: rgb(41, 127, 155);
-				}
-
-				&:hover {
-					color: yellow;
 				}
 			}
 		}
